; ModuleID = '/home/carl/AnghaBench/torch7/extr_Generator.c_torch_Generator_init.c'
source_filename = "/home/carl/AnghaBench/torch7/extr_Generator.c_torch_Generator_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@torch_Generator = common dso_local global i32 0, align 4
@torch_Generator_new = common dso_local global i32 0, align 4
@torch_Generator_free = common dso_local global i32 0, align 4
@torch_Generator_factory = common dso_local global i32 0, align 4
@torch_Generator_table_ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @torch_Generator_init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* @torch_Generator, align 4
  %5 = load i32, i32* @torch_Generator_new, align 4
  %6 = load i32, i32* @torch_Generator_free, align 4
  %7 = load i32, i32* @torch_Generator_factory, align 4
  %8 = call i32 @luaT_newmetatable(i32* %3, i32 %4, i32* null, i32 %5, i32 %6, i32 %7)
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* @torch_Generator_table_, align 4
  %11 = call i32 @luaT_setfuncs(i32* %9, i32 %10, i32 0)
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @lua_pop(i32* %12, i32 1)
  ret void
}

declare dso_local i32 @luaT_newmetatable(i32*, i32, i32*, i32, i32, i32) #1

declare dso_local i32 @luaT_setfuncs(i32*, i32, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
